<resources>
    <string name="app_name">Alami Telecom</string>
    <string name="title_profile">My Profile</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_my_balance">My Balance</string>
    <string name="title_company_bank_accounts">Company Accounts</string>
    <string name="title_my_bank_accounts">My Accounts</string>
    <string name="title_add_bank_account">Add Bank Accounts</string>
    <string name="title_loan_payment">Loan Payment Request</string>
    <string name="title_edit_bank_account">Edit Bank Accounts</string>
    <string name="title_load_fund_requests">My Fund Load Requests</string>
    <string name="title_make_fund_requests">Make Fund Load Requests</string>
    <string name="title_update_fund_requests">Update Fund Load Requests</string>
    <string name="title_single_pin_order">Single Order</string>
    <string name="title_bulk_pin_order">Bulk Orders</string>
    <string name="btn_pay_now">Pay Now</string>
    <string name="enter_bill_id">Enter Bill Number</string>
    <string name="alert_enter_bill_id">Please enter bill number.</string>
    <string name="currency_ethiopia_symbol">&currencyEthiopiaSymbol;</string>
    <string name="currency_ethiopia_symbol1">&currencyEthiopiaSymbol1;</string>
    <string name="currency_ethiopia_unit">&currencyEthiopiaUnit;</string>
    <string name="balance">%1$s &currencyEthiopiaUnit;</string>
    <string name="balance_"><b>%1$s</b>\n&currencyEthiopiaUnit;</string>
    <string name="hint_bill_no">Bill number</string>
    <string name="txt_welcome_user">Welcome <b>%1$s!</b></string>
    <string name="txt_avl_balance">Available Balance</string>
    <string name="txt_mobile_recharge">Mobile Recharge</string>
    <string name="txt_retail_users">My Retail Users</string>
    <string name="txt_voucher_recharge">Voucher</string>
    <string name="txt_print_screen">Print</string>
    <string name="txt_purchase_offline">Print Offline Pin</string>
    <string name="txt_airtime_recharge">Top up</string>
    <string name="txt_select_operator">Select Operator</string>
    <string name="txt_select_amount">Select Recharge Amount</string>
    <string name="txt_voucher_amount">Select Voucher Amount</string>
    <string name="txt_please_click_print">Please click on Print to sell this voucher</string>
    <string name="txt_print_type">Select print type</string>
    <string name="txt_print_voucher">Print Voucher</string>
    <string name="txt_or">OR</string>
    <string name="txt_sms">Send SMS</string>
    <string name="txt_send_email">Send Email</string>
    <string name="txt_sending_request">Sending Request</string>
    <string name="txt_please_wait">Please wait…</string>
    <string name="txt_please_wait_printing">Please wait, printing…</string>
    <string name="txt_successful">Successful</string>
    <string name="txt_successful_recharge">Your recharge is Successful.</string>
    <string name="txt_recharge_information">Recharge Information</string>
    <string name="txt_voucher_information">Voucher Information</string>
    <string name="txt_loan_payment_information">Loan Payment Information</string>
    <string name="txt_serial_number">Serial number    :  %1$s</string>
    <string name="txt_recharge_amount">Recharge Amount  :  %1$s</string>
    <string name="txt_top_up_amount">Top-up Amount</string>
    <string name="txt_pin_no">Pin No.          :  %1$s</string>
    <string name="txt_current_password">Current Password</string>
    <string name="txt_new_password">New Password</string>
    <string name="txt_confirm_new_password">Confirm new Password</string>
    <string name="txt_lockfund">Lockfund   : %1$s</string>
    <string name="txt_terminal_number">Terminal Number   : %1$s</string>
    <string name="txt_name">Name</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="txt_firm_name">Firm Name</string>
    <string name="txt_mobile">Mobile Number</string>
    <string name="txt_serial">Serial Number</string>
    <string name="txt_email">Email</string>
    <string name="txt_address">Address</string>
    <string name="txt_lockfund_">Lockfund</string>
    <string name="txt_terminal_number_">Terminal Number</string>
    <string name="text_warning">Warning!</string>
    <string name="text_pin_group"><![CDATA[Pin group number  :  <b>%1$s</b>]]></string>
    <string name="text_pin_serial"><![CDATA[Pin serial number :  <b>%1$s</b>]]></string>
    <string name="text_pin_operator"><![CDATA[Operator          :  <b>%1$s</b>]]></string>
    <string name="text_pin_sold_date"><![CDATA[Sold date       :  <b>%1$s</b>]]></string>
    <string name="text_pin_expiry_date"><![CDATA[Expiry date       :  <b>%1$s</b>]]></string>
    <string name="txt_bank_account_name">Account Name</string>
    <string name="txt_bank_account_number">Account Number</string>
    <string name="txt_bank_name">Bank Name</string>
    <string name="txt_bank_branch_name">Branch Name</string>
    <string name="txt_bank_branch_swift_code">SWIFT Code</string>
    <string name="txt_transaction_id_">Transaction ID</string>
    <string name="txt_transaction_number">Transaction Number</string>
    <string name="txt_remark">Remark</string>
    <string name="text_bank_account_name"><![CDATA[Account name : <b>%1$s</b>]]></string>
    <string name="text_bank_account_number"><![CDATA[Account number : <b>%1$s</b>]]></string>
    <string name="text_bank_name"><![CDATA[Bank Name : <b>%1$s</b>]]></string>
    <string name="text_bank_branch"><![CDATA[Bank Branch : <b>%1$s</b>]]></string>
    <string name="text_bank_ifsc"><![CDATA[Bank IFSC : <b>%1$s</b>]]></string>
    <string name="text_load_request_amount"><![CDATA[Request Amount : <b>%1$s</b>]]> &currencyEthiopiaUnit;</string>
    <string name="text_load_transac_number"><![CDATA[Transaction ID : <b>%1$s</b>]]></string>
    <string name="text_load_fund_user_remark"><![CDATA[User Remark : <b>%1$s</b>]]></string>
    <string name="text_load_fund_admin_remark"><![CDATA[Admin Remark : <b>%1$s</b>]]></string>
    <string name="text_transac_id"><![CDATA[Transaction ID       :  <b>%1$s</b>]]></string>
    <string name="text_transac_order_id"><![CDATA[Transaction Order ID       :  <b>%1$s</b>]]></string>
    <string name="txt_duplicate">***Duplicate***</string>
    <string name="txt_receipt_service_name">Alami Telecom</string>
    <string name="txt_receipt_retailer_name">Retailer Name : %1$s</string>
    <string name="txt_receipt_amount">Amount    : %1$s &currencyEthiopiaUnit;</string>
    <string name="txt_receipt_mobile">Mobile    : %1$s</string>
    <string name="txt_receipt_serial_number">Serial No : %1$s</string>
    <string name="txt_receipt_pin_number">Pin No    : %1$s</string>
    <string name="txt_recharge_instruction">Recharge Instruction
        \nDial *805* Pin Number #
        \nBalance Dial :  .804#
        \nCustomer Care : 994</string>
    <string name="txt_receipt_date_time">Date Time: %1$s</string>
    <string name="txt_receipt_des_voucher">This prepaid recharge Voucher is power By Highlight Trading Printed 1 time(s)\nNo Returns will be accepted.</string>
    <string name="txt_receipt_des_top_up">This prepaid recharge Top-up is power By Highlight Trading Printed 1 time(s)\nNo Returns will be accepted.</string>
    <string name="txt_receipt_highlight_trading">Highlight Trading</string>
    <string name="txt_receipt_address">Address : Around Piassa Tewodros Square
        \nIn front of Shalom cinema,
        \nAddis Ababa. Ethiopia
        \nTel No : 0111-264826 / 0118-275850</string>
    <string name="txt_status_success">Success</string>
    <string name="txt_status_failed">Failed</string>
    <string name="txt_status_pending">Pending</string>
    <string name="txt_transac_main_type_none">None</string>
    <string name="txt_transac_main_type_AdminLoadTransfer">AdminLoadTransfer</string>
    <string name="txt_transac_main_type_AdminLoadDeduct">AdminLoadDeduct</string>
    <string name="txt_transac_main_type_TopupSale">TopupSale</string>
    <string name="txt_transac_main_type_VoucherSale">VoucherSale</string>
    <string name="txt_transac_main_type_LoadTransfer">LoadTransfer</string>
    <string name="txt_credit_plus">+ Credit</string>
    <string name="txt_debit_minus">- Debit</string>
    <string name="txt_opening_balance">Opening Balance : %1$s</string>
    <string name="txt_closing_balance">Closing Balance : %1$s</string>
    <string name="txt_transaction_id">Transaction ID : %1$s</string>
    <string name="txt_voucher_amount_">Voucher Amount</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_ttl">Total</string>
    <string name="txt_ttl_amount">Total\[&currencyEthiopiaUnit;\]</string>
    <string name="txt_grand_ttl">Grand Total : %1$s &currencyEthiopiaUnit;</string>
    <string name="txt_ttl_qty">Total Qty : %1$d</string>
    <string name="txt_client_name">Client Name</string>
    <string name="txt_bank_account_number_">Bank Account Number</string>
    <string name="txt_amount_to_pay">Amount To Pay</string>
    <string name="txt_reference_number">Reference Number</string>
    <string name="txt_single_print">Single Print</string>
    <string name="txt_bulk_print">Bulk Print</string>
    <string name="voucher_status_fresh">Fresh</string>
    <string name="voucher_status_hold">Hold</string>
    <string name="voucher_status_assigned">Assigned</string>
    <string name="voucher_status_sold">Sold</string>
    <string name="dummy_name">Android</string>
    <string name="dummy_user_name">Test1</string>
    <string name="dummy_firm_name">Highlight EVD</string>
    <string name="dummy_amount">1000 &currencyEthiopiaUnit;</string>
    <string name="dummy_mobile_number">0987654321</string>
    <string name="dummy_email">android@gmail.com</string>
    <string name="hint_user_id">User ID / Mobile number</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Continue</string>
    <string name="btn_proceed">Proceed</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_balance">Balance</string>
    <string name="menu_transaction_history">Transaction History</string>
    <string name="menu_my_statements">My Statements</string>
    <string name="menu_my_banks">My Banks</string>
    <string name="menu_my_vouchers">My Vouchers History</string>
    <string name="menu_my_users">My Users</string>
    <string name="menu_bluetooth_test">Bluetooth Test</string>
    <string name="menu_logout">Logout</string>
    <string name="connect">Search for and connect a Bluetooth printer</string>
    <string name="txt_content">&quot;&quot;</string>
    <string name="choose_paper_width">Paper width:</string>
    <string name="width1">58mm</string>
    <string name="width2">80mm</string>
    <string name="printhex">HEX</string>
    <string name="btnSend">Send Data</string>
    <string name="btn_test">Print Test</string>
    <string name="btn_prtbmp">Print Picture</string>
    <string name="printpicture">Graphical Print</string>
    <string name="chosecommand">Please select instruction</string>
    <string name="btnClose">Close</string>
    <string name="contentdescription"></string>
    <string name="btn_prttable">Print Form</string>
    <string name="Smallticketprinting">Small Ticket Printing</string>
    <string name="btn_prtcode">Print 1D/2D Codebar</string>
    <string name="btn_scqr">Generate QR Code Print</string>
    <string name="btn_dyca">Turn on the camera</string>
    <string name="input">Please enter a print!</string>
    <string name="choose_printcoding"></string>
    <string name="big5">BIG5</string>
    <string name="thai">Thai</string>
    <string name="kor">Korean</string>
    <string name="gbk12">Simplified</string>
    <string name="welcome_back">Welcome back,  %1$s</string>
    <string name="enter_password_to_continue">Enter password to continue</string>
</resources>