<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/colorPrimary"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back_arrow_left_white_24dp"
                app:title="Voucher Print"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:titleTextColor="@color/white" >

                <TextView
                    android:id="@+id/title_right_text"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="#fff" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:visibility="gone"
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hello"
                android:gravity="center"/>
            <Button
                android:id="@+id/button_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_size_20sp"
                android:layout_marginEnd="@dimen/text_size_20sp"
                android:textAllCaps="false"
                android:text="@string/connect" />
            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="12dp">
            <EditText
                android:id="@+id/edit_text_out"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:gravity="center_vertical|top"
                android:hint="@string/input"
                android:text="@string/txt_content"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_paper_width" />

                <RadioButton
                    android:id="@+id/width_58mm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:checked="true"
                    android:text="@string/width1" />

                <RadioButton
                    android:id="@+id/width_80mm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/width2" />

                <CheckBox
                    android:id="@+id/checkBoxHEX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/printhex" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_printcoding" />

                <RadioGroup
                    android:id="@+id/radioGroupPaperSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/gbk12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-8dip"
                        android:checked="true"
                        android:text="@string/gbk12" />

                    <RadioButton
                        android:id="@+id/big5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-8dip"
                        android:text="@string/big5" />

                    <RadioButton
                        android:id="@+id/thai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-8dip"
                        android:text="@string/thai" />

                    <RadioButton
                        android:id="@+id/kor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-8dip"
                        android:text="@string/kor" />

                </RadioGroup>
            </LinearLayout>

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/Send_Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1.0"
                            android:text="@string/btnSend"></Button>

                        <Button
                            android:id="@+id/btn_test"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/btn_test"></Button>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_printpicture"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1.0"
                            android:text="@string/printpicture"></Button>

                        <Button
                            android:id="@+id/btn_prtbmp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/btn_prtbmp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_prtcommand"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/chosecommand"></Button>

                        <Button
                            android:id="@+id/btn_prttable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/btn_prttable"></Button>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_prtsma"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/Smallticketprinting"></Button>

                        <Button
                            android:id="@+id/btn_prtbarcode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/btn_prtcode"></Button>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_scqr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/btn_scqr"></Button>

                        <Button
                            android:id="@+id/btn_dyca"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:gravity="center"
                            android:text="@string/btn_dyca"></Button>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btnClose" />

                    <ImageView
                        android:id="@+id/imageViewPictureUSB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/contentdescription"
                        android:maxWidth="1080dp"
                        android:maxHeight="1920dp" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>