<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:clipToPadding="false">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="244dp"
        android:layout_height="168dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

    <TextView
        android:id="@+id/txtEnterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_password_to_continue"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputUserId"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_user_id"
        app:errorEnabled="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/txtEnterPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_password"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputUserId"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_login"
        android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>