<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/rectangle_16"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_arrow_left_white_24dp"
            app:title="@string/txt_mobile_recharge"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:titleTextColor="@color/white">

            <ImageView
                android:id="@+id/ivOperatorLogo"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_margin="4dp"
                android:background="@drawable/bg_recharge_option"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ethio_telecom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/txt_voucher_amount"
            android:textSize="24sp"
            android:textColor="#0e253a"
            android:typeface="serif"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/txtTtlAmount"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            tools:listitem="@layout/item_recharge_amount" />

        <TextView
            android:id="@+id/txtTtlAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:text="@string/txt_grand_ttl"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnProceed" />

        <Button
            android:id="@+id/btnProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_proceed"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>